delete animation and fix bug drawer

--- a/index.html
+++ b/index.html
@@ -173,14 +173,9 @@
             <section class="trusted">
                 <div class="container">
                     <div class="trusted__inner">
-                        <h1 class="title" data-aos="zoom-in">
-                            Meet my recent clients
-                        </h1>
+                        <h1 class="title">Meet my recent clients</h1>
                         <div class="trusted__group">
-                            <div
-                                class="trusted__group--child"
-                                data-aos="zoom-in"
-                            >
+                            <div class="trusted__group--child">
                                 <img
                                     src="./asset/img/icon-gg.png"
                                     alt=""
@@ -188,10 +183,7 @@
                                 />
                                 <h3 class="group-title">Google</h3>
                             </div>
-                            <div
-                                class="trusted__group--child"
-                                data-aos="zoom-in"
-                            >
+                            <div class="trusted__group--child">
                                 <img
                                     src="./asset/img/icon-warner.png"
                                     alt=""
@@ -199,10 +191,7 @@
                                 />
                                 <h3 class="group-title">Warner Bros</h3>
                             </div>
-                            <div
-                                class="trusted__group--child"
-                                data-aos="zoom-in"
-                            >
+                            <div class="trusted__group--child">
                                 <img
                                     src="./asset/img/icon-mailchamp.png"
                                     alt=""
@@ -210,10 +199,7 @@
                                 />
                                 <h3 class="group-title">Mailchimp</h3>
                             </div>
-                            <div
-                                class="trusted__group--child"
-                                data-aos="zoom-in"
-                            >
+                            <div class="trusted__group--child">
                                 <img
                                     src="./asset/img/icon-adobe.png"
                                     alt=""
@@ -221,10 +207,7 @@
                                 />
                                 <h3 class="group-title">Adobe</h3>
                             </div>
-                            <div
-                                class="trusted__group--child"
-                                data-aos="zoom-in"
-                            >
+                            <div class="trusted__group--child">
                                 <img
                                     src="./asset/img/icon-upwork.png"
                                     alt=""
@@ -232,10 +215,7 @@
                                 />
                                 <h3 class="group-title">UpWork</h3>
                             </div>
-                            <div
-                                class="trusted__group--child"
-                                data-aos="zoom-in"
-                            >
+                            <div class="trusted__group--child">
                                 <img
                                     src="./asset/img/icon-cloud.png"
                                     alt=""
@@ -243,10 +223,7 @@
                                 />
                                 <h3 class="group-title">Creative Cloud</h3>
                             </div>
-                            <div
-                                class="trusted__group--child"
-                                data-aos="zoom-in"
-                            >
+                            <div class="trusted__group--child">
                                 <img
                                     src="./asset/img/icon-woo.png"
                                     alt=""
@@ -254,10 +231,7 @@
                                 />
                                 <h3 class="group-title">Woocommerce</h3>
                             </div>
-                            <div
-                                class="trusted__group--child"
-                                data-aos="zoom-in"
-                            >
+                            <div class="trusted__group--child">
                                 <img
                                     src="./asset/img/icon-canva.png"
                                     alt=""
@@ -273,14 +247,14 @@
             <section class="service">
                 <div class="container">
                     <div class="service__inner">
-                        <h1 class="title" data-aos="zoom-in">Specialities</h1>
-                        <p class="desc" data-aos="zoom-in">
+                        <h1 class="title">Specialities</h1>
+                        <p class="desc">
                             Lorem ipsum dolor sit amet, consectetur adipiscing
                             elit. In urna, non nisl tincidunt ut elementum
                             turpis.
                         </p>
                         <div class="service-list row row-cols-md-3 row-cols-1">
-                            <div class="service-card col" data-aos="flip-left">
+                            <div class="service-card col">
                                 <div class="card-icon">
                                     <img
                                         src="./asset/icon/icon-product.png"
@@ -294,7 +268,7 @@
                                     elit. Non nisl solor ut elementum turpis.
                                 </p>
                             </div>
-                            <div class="service-card col" data-aos="flip-left">
+                            <div class="service-card col">
                                 <div class="card-icon">
                                     <img
                                         src="./asset/icon/icon-design.png"
@@ -308,7 +282,7 @@
                                     elit. Non nisl solor ut elementum turpis.
                                 </p>
                             </div>
-                            <div class="service-card col" data-aos="flip-left">
+                            <div class="service-card col">
                                 <div class="card-icon">
                                     <img
                                         src="./asset/icon/icon-phone.png"
@@ -389,10 +363,7 @@
                                 class="work-bottom--list row row-cols-md-2 row-cols-1"
                             >
                                 <div class="col">
-                                    <div
-                                        class="work-bottom--card"
-                                        data-aos="flip-up"
-                                    >
+                                    <div class="work-bottom--card">
                                         <div class="card-info">
                                             <h3 class="card-title title">
                                                 Wally Website
@@ -415,10 +386,7 @@
                                     </div>
                                 </div>
                                 <div class="col">
-                                    <div
-                                        class="work-bottom--card"
-                                        data-aos="flip-up"
-                                    >
+                                    <div class="work-bottom--card">
                                         <div class="card-info">
                                             <h3 class="card-title title">
                                                 Wally Website
@@ -441,10 +409,7 @@
                                     </div>
                                 </div>
                                 <div class="col">
-                                    <div
-                                        class="work-bottom--card"
-                                        data-aos="flip-up"
-                                    >
+                                    <div class="work-bottom--card">
                                         <div class="card-info">
                                             <h3 class="card-title title">
                                                 Wally Website
@@ -467,10 +432,7 @@
                                     </div>
                                 </div>
                                 <div class="col">
-                                    <div
-                                        class="work-bottom--card"
-                                        data-aos="flip-up"
-                                    >
+                                    <div class="work-bottom--card">
                                         <div class="card-info">
                                             <h3 class="card-title title">
                                                 Wally Website
@@ -780,11 +742,7 @@
                         <a href="#!" class="gallery-link">@interaction_arif</a>
                         <div class="gallery-list row row-cols-md-3 row-cols-1">
                             <div class="col">
-                                <div
-                                    class="gallery-card"
-                                    data-aos="fade-up"
-                                    data-aos-anchor-placement="top-center"
-                                >
+                                <div class="gallery-card">
                                     <img
                                         src="./asset/img/gallery-img-1.jpg"
                                         alt=""
@@ -793,11 +751,7 @@
                                 </div>
                             </div>
                             <div class="col">
-                                <div
-                                    class="gallery-card"
-                                    data-aos="fade-up"
-                                    data-aos-anchor-placement="top-center"
-                                >
+                                <div class="gallery-card">
                                     <img
                                         src="./asset/img/gallery-img-2.jpg"
                                         alt=""
@@ -806,11 +760,7 @@
                                 </div>
                             </div>
                             <div class="col">
-                                <div
-                                    class="gallery-card"
-                                    data-aos="fade-up"
-                                    data-aos-anchor-placement="top-center"
-                                >
+                                <div class="gallery-card">
                                     <img
                                         src="./asset/img/gallery-img-3.jpg"
                                         alt=""
